# AVGEngine

./: .gitignore  .travis.yml  AVGEngine.sln  AndroidDeploy.json  BuildAndroid.sh  CMakeLists.txt  Clean.bat  Clean.sh  InitAndroid.sh  ReadMe.md  SDLActivity-release-unsigned.apk  UpdateResourcePackage.bat  UpdateResourcePackage.sh  appveyor.yml
AVGEngine/: AVGEngine.vcxproj  AVGEngine.vcxproj.filters  CMakeLists.txt
AVGEngine/res/scene/: MainMenuScene.cnf
AVGEngine/res/widget/: Dialog.cnf
AVGEngine/src/: AVGEngine.cpp  Application.cpp  Application.h
AVGEngine/src/scene/: CustomWidget.cpp  CustomWidget.h  CustonWidget.cpp  IScene.h  Image.h  Label.cpp  Label.h  MainMenuScene.cpp  MainMenuScene.h  Scene.cpp  Scene.h  Widget.cpp  Widget.h  WidgetContainer.cpp  WidgetContainer.h
AVGEngine/src/util/: Config.cpp  Config.h  DynamicObj.h  OpenGL.h  Platform.h  Resource.cpp  Resource.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Uncopyable.h  Window.cpp  Window.h
AVGEngineTests/: AVGEngineTests.vcxproj  AVGEngineTests.vcxproj.filters  SceneTest.cpp
AVGEngineTests/res/scene/: TestScene.cnf  TestScene1.cnf  TestScene2.cnf  (+1 more)
AndroidPatch/: 0001FixSDLImage.patch  0002FixCompletError.patch  0003AddFiles.patch  0004AddLibs.patch  0005FixAntConfig.patch  0006ChangeSDKVersion.patch  0007AddEglSupport.patch  0008ChangeAndroidAppName.patch
ResBuilder/: Build.bat  Build.sh  ResBuilder.java
Scripts/: BuildAndroid.sh  Clean.bat  Clean.sh  InitAndroid.sh  UpdateResourcePackage.bat  UpdateResourcePackage.sh
src/: Application.h
src/util/: Window.cpp  Window.h
(+14 files in other folders)
